Fix scrolling issue on mobile

--- a/Client/src/styles/gain.module.css
+++ b/Client/src/styles/gain.module.css
@@ -14,7 +14,7 @@
 }
 
 .main:active{
-    transform: translate(1px, 1px);
+    box-shadow: #ff3d3d60 0px 19px 38px, #ff3d3d40 0px 15px 12px;
 }
 
 .holder {
