--- a/Client/src/styles/loss.module.css
+++ b/Client/src/styles/loss.module.css
@@ -14,7 +14,7 @@
 }
 
 .main:active{
-    transform: translate(1px, 1px);
+    box-shadow: #420420 0px 19px 38px, #420420 0px 15px 12px;
 }
 
 .holder {
